[package]
name = "rlua"
version = "0.19.1"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "High level bindings to Lua 5.x"
repository = "https://github.com/amethyst/rlua"
documentation = "https://docs.rs/rlua"
readme = "README.md"
keywords = ["lua"]
license = "MIT"

[badges]
circle-ci = { repository = "amethyst/rlua", branch = "master" }

[features]
default=["builtin-lua53"]
builtin-lua53=["rlua-lua53-sys"]

system-lua53=["rlua-lua53-sys", "rlua-lua53-sys/lua53-pkg-config"]

# Enabled functions from the math module that have been deprecated
lua-compat-mathlib = []


[dependencies]
libc = { git = "https://github.com/ultimate-research/libc-nnsdk" }
num-traits = { version = "0.2.14" }
bitflags = { version = "1.0.4" }
bstr = {version = "0.2", features = ["std"], default_features = false }
rlua-lua53-sys = { path = "./crates/rlua-lua53-sys", optional = true }


[dev-dependencies]
rustyline = "6.0"
criterion = "0.3.0"
compiletest_rs = { version = "0.4", features = ["stable"] }

[[bench]]
name = "benchmark"
harness = false
